Mon Aug 13 11:41:02 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/xsltutils.c: applied fix suggested by Tom Moog
	  for xsltTimeStamp() in bug report #58012

Sun Aug 12 21:53:13 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/functions.c libxslt/keys.c libxslt/transform.c 
	  libxslt/xsltutils.h: cleaned up the code w.r.t. handling
	  of 'non-standard' libxml element like namespace nodes.
	* tests/docs/Makefile.am tests/docs/bug-54.xml
	  tests/general/Makefile.am tests/general/bug-54.*: added a 
	  specific example in the regression tests

Wed Aug  8 22:57:05 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* HACKING: added John Fleck right to commit in the doc subdir

Tue Aug  7 03:11:31 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: for heriting defaulted atts from the DTD
	* tests/docs/Makefile.am tests/docs/bug-52.xml tests/docs/bug-53.xml
	  tests/general/Makefile.am tests/general/bug-52.*
	  tests/general/bug-53.*: Added a few new tests for recently fixed
	  stuff in libxml
	* tests/xmlspec/REC-xml-20001006-review.html
	  tests/xmlspec/REC-xml-20001006.html: inheriting default attrs from
	  DTD changed the result by adding extra attributes to the HTML output

2001-08-06  Peter Williams  <peterw@ximian.com>

	* libexslt/Makefile.am, xsltproc/Makefile.am: Fixes for compiling
	when srcdir != builddir.

Sun Aug  5 09:37:14 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>

	* libxslt/extensions.[ch] libxslt/preproc.[ch] libxslt/transform.c
	  libxslt/xslt.c libxslt/xsltInternals.h: modified extension framework
	  to easify extension element precomputation.
	* libexslt/functions.c: uses the new framework and precomputes
	  func:result elements.

Sat Aug  4 20:42:32 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: bug fix on output="text" from Nicolas Marsgui

Fri Aug  3 14:23:25 CEST 2001 Daniel Veillard <daniel@veillard.com>

	* tests/general/bug-21-.out tests/general/bug-31-.out: