@@ -25,7 +25,8 @@ extern "C" {
  */
 #define XSLT_REGISTER_FUNCTION_LOOKUP(ctxt)			\
     xmlXPathRegisterFuncLookup((ctxt)->xpathCtxt,		\
-		xsltXPathFunctionLookup, (void *)(ctxt->xpathCtxt));
+	(xmlXPathFuncLookupFunc) xsltXPathFunctionLookup,	\
+	(void *)(ctxt->xpathCtxt));
 
 xmlXPathFunction
 	xsltXPathFunctionLookup	(xmlXPathContextPtr ctxt,
