@@ -339,7 +339,7 @@ struct _xsltStylesheet {
     /*
      * Precomputed blocks
      */
-    xsltStylePreCompPtr preComps;	/* list of precomputed blocks */
+    xsltElemPreCompPtr preComps;/* list of precomputed blocks */
     int warnings;		/* number of warnings found at compilation */
     int errors;			/* number of errors found at compilation */
 
